# favicons

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
favicons/: __init__.py  _constants.py  _exceptions.py  _generate.py  _util.py  cli.py  exceptions.py
favicons/_cli/: __init__.py  main.py
favicons/_types/: __init__.py  color.py  properties.py
